--- a/index.html
+++ b/index.html
@@ -161,17 +161,26 @@ footer {
 
 <!-- SUBJECT SECTION -->
 <div class="subject-section">
-  <div class="subject-title">Data Structures</div>
+  <div class="subject-title">Digital literacy</div>
   <div class="link-grid">
     <!-- DS LINKS -->
     <div class="link-card">
-      <a href="https://www.geeksforgeeks.org/data-structures/" target="_blank">
-        <i class="ri-database-2-line"></i> GFG Data Structures
+      <a href="https://jmp.sh/s/W01TwYEb464a5THtKJnK" target="_blank">
+        <i class="ri-database-2-line"></i>Digital literacy 
       </a>
     </div>
   </div>
 </div>
-
+<!--
+<div class="add more resources">
+  <div class="contact me">Subject Name</div>
+  <div class="link-grid">
+    <div class="link-card">
+      <a href="" target="_blank">
+        <i class="ri-external-link-line"></i> Resource Title
+      </a>
+    </div>
+    <!--  -->
 <!-- TEMPLATE TO ADD MORE SUBJECTS (COPY & EDIT THIS BLOCK) -->
 <!--
 <div class="subject-section">
@@ -182,14 +191,22 @@ footer {
         <i class="ri-external-link-line"></i> Resource Title
       </a>
     </div>
-    <!-- Add more links here -->
+    <!--  --><div class="Contribute with more resources">
+  <div class="subject-title">Add more resources</div>
+  <div class="link-grid">
+    <div class="link-card">
+      <a href="https://t.me/+RNNfzotcVAAzM2E9" target="_blank">
+        <i class="ri-external-link-line"></i> Contact me
+      </a>
+    </div>
+    <!--  -->
   </div>
 </div>
 -->
 
 <!-- FOOTER -->
 <footer>
-  <p>&copy; 2025 Batch 252 Portal. Designed with passion for learners.</p>
+  <p>&copy; 2025 Batch 252 Portal. Designed by Tanjin sazed .</p>
 </footer>
 
   </div>
