--- a/index.html
+++ b/index.html
@@ -130,18 +130,25 @@ footer {
     <h1>Batch 252 Portal</h1>
     <h2>Explore Top-Tier Study Resources</h2><!-- SUBJECT SECTION -->
 <div class="subject-section">
-  <div class="subject-title">Frontend Development</div>
+  <div class="subject-title">Mathematics</div>
   <div class="link-grid">
     <!-- FRONTEND LINKS -->
     <div class="link-card">
-      <a href="https://reactjs.org" target="_blank">
-        <i class="ri-code-s-slash-line"></i> React Basics
+      <a href="https://drive.google.com/file/d/1y__SqwWJ2QGI6xZrZ80HGzx1n7U4UoRZ/view?usp=drivesdk" target="_blank">
+        <i class="ri-code-s-slash-line"></i> limit, continuation, differentiability 
       </a>
     </div>
     <div class="link-card">
-      <a href="https://tailwindcss.com" target="_blank">
-        <i class="ri-palette-line"></i> Tailwind CSS Docs
+      <a href="https://drive.google.com/file/d/1yYiCwldVXCJ5TubTXvOymODer0imbm8x/view?usp=drivesdk" target="_blank">
+        <i class="ri-palette-line"></i> Relation and 
+      functions 
       </a>
+        
+    </div>
+    <div class="link-card">
+      <a href="https://drive.google.com/file/d/1yYgBP4s8d92UdiM-Itz5egbjto2O_Ehv/view?usp=drivesdk" target="_blank">
+        <i class="ri-palette-line"></i>Domain,Range, Formula
+      </a> 
     </div>
   </div>
 </div>
