--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@ footer {
 
 <!-- SUBJECT SECTION -->
 <div class="subject-section">
-  <div class="subject-title">Documentation & Reference</div>
+  <div class="subject-title">English</div>
   <div class="link-grid">
     <!-- DOCUMENTATION LINKS -->
     <div class="link-card">
-      <a href="https://developer.mozilla.org/en-US/" target="_blank">
+      <a href="https://drive.google.com/file/d/1yhPi_S5YhsoS6ni74Q-RTF8k4MxNi6mF/view?usp=drivesdk" target="_blank">
         <i class="ri-book-open-line"></i> MDN Web Docs
       </a>
     </div>
