--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ footer {
     <!-- DOCUMENTATION LINKS -->
     <div class="link-card">
       <a href="https://drive.google.com/file/d/1yhPi_S5YhsoS6ni74Q-RTF8k4MxNi6mF/view?usp=drivesdk" target="_blank">
-        <i class="ri-book-open-line"></i> MDN Web Docs
+        <i class="ri-book-open-line"></i> Right form of verb
       </a>
     </div>
   </div>
